src/styling/login.css
/* This css module styles the login page */

body {
    background-color: #343333;
    color: white;
}

/* Styles the image tag */
#loginPageImg {
    position: fixed;
    width: 40vw;
    height: 100vh;
    object-fit: cover;

    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
}

/* Styles the textual tags */
#login{
    position: relative;
    text-align: center;
    left: 25%;

    font-family: 'Rosarivo', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 48px;
    line-height: 67px;
}

#email {
    position: relative;
    text-align: center;
    left: 10%;
    top: 80px;

    font-family: 'Rosarivo', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
}

#password {
    position: relative;
    text-align: center;
    left: 10.5%;
    top: 180px;

    font-family: 'Rosarivo', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
}

/* Styles the input tags */
#emailInput {
    position: relative;

    top: 38px;
    left: 59%;
}

#passwordInput {
    position: relative;

    top: 170px;
    left: 51.8%;


}

/* Styles the button tags */
#forgotPassword, #signUp, #signIn{
    position: absolute;
    background-color: #0F6E97;
    color: white;

    border-radius: 10%;
}

#signIn {
    left: 70%;
    bottom: 50%;
}

#signUp {
    left: 90%;
    bottom: 10px;
}

#forgotPassword {
    left: 43%;
    bottom: 10px;
}

